<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">photography</string>
    <string name="gallery">Galeria</string>
    <string name="maps">Mapa</string>
    <string name="camera">Câmera</string>
    <string name="photography">Photography</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main1">MainActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="preview">Preview</string>
    <string name="title_activity_pictures">PicturesActivity</string>
    <string name="galleryName">galleryName</string>
    <string name="save">Salvar</string>
    <string name="gallery_activity_title">Galeria</string>
	<string name="reload">Recarregar</string>
	<string name="spinner_label">Escolha uma localização:</string>
	<string name="location_label">Localização: </string>
	<string name="name_label">Nome do arquivo: </string>
	<string name="actual_date_label">Data da foto: </string>
</resources>
