<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/photoInfo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/preview" />
    
    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label" />

    <TextView
        android:id="@+id/locationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label" />
    
    <TextView
        android:id="@+id/nameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/actualDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actual_date_label" />
    
    <TextView
        android:id="@+id/actualDateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
